Got the over count and timer hooked up

--- a/CricketUmp/CricketUmp/device4in.storyboard
+++ b/CricketUmp/CricketUmp/device4in.storyboard
@@ -151,7 +151,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjd-9o-gZ2" userLabel="Over Rate Label">
-                                <rect key="frame" x="45" y="63" width="48" height="21"/>
+                                <rect key="frame" x="45" y="64" width="163" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -163,6 +163,12 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Overs: 123.4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kuk-Pt-Xbn" userLabel="Over Count Label">
+                                <rect key="frame" x="99" y="90" width="123" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -170,6 +176,7 @@
                     <connections>
                         <outlet property="m_deliveryResults" destination="Q3t-UB-d0L" id="nlJ-ff-cay"/>
                         <outlet property="m_inningsTimerLabel" destination="mcy-9H-hsP" id="jWX-OZ-leY"/>
+                        <outlet property="m_overCountLabel" destination="kuk-Pt-Xbn" id="Thu-Ek-IlZ"/>
                         <outlet property="m_overRateLabel" destination="hjd-9o-gZ2" id="n9u-T8-5jp"/>
                         <outlet property="m_scoreLabel" destination="RUu-8F-bYw" id="LCK-3A-yJB"/>
                     </connections>
